--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" > -->
+  <!-- Load environment variables -->
+  <script src="assets/env.js"></script>
 </head>
 <body>
   <app-root></app-root>
